internal/loader/testdata/invalid/syntax-error/module.cue
package syntaxerror

// Deliberate syntax error: unclosed brace causes inst.Err to be non-nil
metadata: {
	name: "syntax-error"
	version: "1.0.0"
